Fix tag names overflowing context menus

--- a/frontend/src/styles/context_menu.scss
+++ b/frontend/src/styles/context_menu.scss
@@ -72,6 +72,7 @@
             cursor: pointer;
             position: relative;
             z-index: 1;
+            overflow-wrap: break-word;
         }
 
         button:disabled,
